--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Panaroma view</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
 
 <style>
@@ -51,4 +51,5 @@
     </div>
 </body>
 
+<script src = "app.js"></script>
 </html>
